--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ src/swig/luarun.h
 doc/screenshots/*.png
 ! doc/screenshots/fityk076.png
 src/cmpfit/
+.DS_Store
+
+autogenmac.sh
+
+xylib/specsxml.cpp
+
+xylib/specsxy.cpp
+
+xylib/spectra.cpp
